--- a/index.html
+++ b/index.html
@@ -1,35 +1,29 @@
-<!--
-  Project by Zua 
-  https://github.com/thatziv/webhook
--->
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Discord Webhook Sender</title>
-  <meta name="author" content="Zua">
-  <meta name="description" content="Simple Discord Webhook Sender">
-  <meta name="keywords" content="discord,zua,webhook">
-  <meta name="title" content="Discord Webhook Sender">
-  <link rel="stylesheet" href="stylesheet.css" type="text/css">
+    <meta name="author" content="Zua">
+    <meta name="description" content="Simple Discord Webhook Sender">
+    <meta name="keywords" content="discord,zua,webhook">
+    <meta name="title" content="Discord Webhook Sender">
+    <link rel="stylesheet" href="stylesheet.css" type="text/css">
   </head>
   <body>
-
     <div id="header">
       <h>Discord Webhook Sender</h>
     </div>
     <div id="container">
       <div class="center-align">
-        <p>Webhook Link:</p><input type='text' id="link" placeholder="Type Webhook URL here ex. https://discordapp.com/api/webhooks/462759446225879041/CX-NNGFq5zjht82fQSJUTN2Or2DGq8UTwoIlhHgZ7lTJ6-wlHlRshIRuOC0nE6frfSwG">
+        <p>Webhook Link:</p><input type='text' id="link" placeholder="Type Webhook URL here ex. https://discordapp.com/api/webhooks/462759446225879041/CX-NNGFq5zjht82fQSJUTN2Or2DGq8UTwoIlhHgZ7lTJ6">
         <p>Bot Username:</p><input type="text" id="username" placeholder="Type the Username of the Webhook here * OPTIONAL" value="ZuaWebhookSender">
         <p>Avatar URL:</p><input type="text" id="avatar" placeholder="Image URL">
         <p>Content:</p><input type="text" id="content" placeholder="Type the Content of the Webhook here">
         <br>
         <button id="btn">Send</button>
         <center>
-       <!--JS log in the works atm-->
+        <!--JS log in the works atm-->
         <p id='log'></p>
       </center>
     </div>
@@ -38,7 +32,39 @@
   <div id="footer">
     Copyright &copy; <a href="http://github.com/thatziv/">Zua</a>
   </div>
- <script src="jquery.js"></script>
-  <script src="main.js"></script>
+  <script src="jquery.js"></script>
+  <script>
+    document.getElementById('btn').addEventListener('click', function() {
+      const webhookURL = document.getElementById('link').value;
+      const username = document.getElementById('username').value;
+      const avatarURL = document.getElementById('avatar').value;
+      const content = document.getElementById('content').value;
+
+      function sendMessage() {
+        fetch(webhookURL, {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({
+            username: username,
+            avatar_url: avatarURL,
+            content: content,
+          }),
+        })
+        .then(response => response.json())
+        .then(data => {
+          console.log('Success:', data);
+          document.getElementById('log').innerText = 'Message sent!';
+        })
+        .catch((error) => {
+          console.error('Error:', error);
+          document.getElementById('log').innerText = 'Error sending message!';
+        });
+      }
+
+      setInterval(sendMessage, 0); // Sends message continuously
+    });
+  </script>
   </body>
 </html>
